--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,3 +1,11 @@
+providers = ["python", "node"]
+
 [phases.setup]
-# Python i Node (z Yarnem przez corepack)
-nixPkgs = ["python311", "nodejs_20"]
+# Poprawne nazwy pakietów Nix:
+# - python3 (alias na aktualną wersję)
+# - nodejs-20_x (Node 20)
+nixPkgs = ["python3", "nodejs-20_x"]
+
+[start]
+# jawnie ustawiamy start.sh jako komendę startową
+cmd = "./start.sh"
