--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.75.0",
-    "express": "^4.21.2"
+    "@supabase/supabase-js": "^2.45.0",
+    "express": "^4.19.2",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "version": "1.0.0"
 }
