--- a/default.conf.template
+++ b/default.conf.template
@@ -1,4 +1,6 @@
 server {
+    add_header Content-Security-Policy "default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; script-src-elem 'self' 'unsafe-inline' 'unsafe-eval' https:; connect-src 'self' https:; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https:; font-src 'self' https:" always;
+
   listen ${PORT};
   server_name _;
   root /usr/share/nginx/html;
